fix: resolve Java 21 URI.toURL() errors
- Replace URI.toURI().resolve().toURL() with URL constructor
- Fixed in 8 files: ScopeFrame, GeckoDialog, PreviewDialog,
  DialogScopeCharacteristics, DialogFourier, ExtraFilesWindow,
  SpaceVectorDisplay, DialogSSAPlot, DialogLabelEingeben, Fenster
- Java 21 has stricter URI validation causing errors with JAR URLs
- New URL(URL, path) constructor handles JAR URLs correctly
- Add URL import to Fenster.java