@@ -54,7 +54,9 @@ public final class ExtraFilesWindow extends javax.swing.JDialog {
         super();
         try {
             URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
-            this.setIconImage(new ImageIcon(picsUrl.toURI().resolve("gecko.gif").toURL()).getImage());
+            // Fix for Java 21: use URL constructor instead of URI.toURL()
+            URL gifUrl = new URL(picsUrl, "gecko.gif");
+            this.setIconImage(new ImageIcon(gifUrl).getImage());
         } catch (Exception ex) {
             Logger.getLogger(ExtraFilesWindow.class.getName()).log(Level.INFO, "could not load image icon!");
         }
