@@ -89,7 +89,9 @@ public class DialogScopeCharacteristics extends GeckoDialog {
                     graphics.setColor(java.awt.Color.white);
                     graphics.fillRect(0, 0, RECT_SIZE, RECT_SIZE);  // weisser Hintergrund
                     URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
-                    java.awt.Image equ1 = new ImageIcon(picsUrl.toURI().resolve("equ1.png").toURL()).getImage();
+                    // Fix for Java 21: use URL constructor instead of URI.toURL()
+                    URL pngUrl = new URL(picsUrl, "equ1.png");
+                    java.awt.Image equ1 = new ImageIcon(pngUrl).getImage();
                     graphics.drawImage(equ1, 0, 0, null);
                 } catch (Exception exc) {
                     exc.printStackTrace();
@@ -116,7 +118,9 @@ public class DialogScopeCharacteristics extends GeckoDialog {
                     graphics.setColor(java.awt.Color.white);
                     graphics.fillRect(0, 0, RECT_SIZE, RECT_SIZE);  // weisser Hintergrund
                     URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
-                    java.awt.Image equ1 = new ImageIcon(picsUrl.toURI().resolve("equ2b.png").toURL()).getImage();
+                    // Fix for Java 21: use URL constructor instead of URI.toURL()
+                    URL pngUrl = new URL(picsUrl, "equ2b.png");
+                    java.awt.Image equ1 = new ImageIcon(pngUrl).getImage();
                     graphics.drawImage(equ1, 0, 0, null);
                 } catch (Exception exception) {
                     exception.printStackTrace();
