@@ -143,7 +143,9 @@ public final class ScopeFrame extends javax.swing.JFrame{
 
     try{
       URL picsUrl = GlobalFilePathes.PFAD_PICS_URL;
-      this.setIconImage(new ImageIcon(picsUrl.toURI().resolve("gecko.gif").toURL()).getImage());
+      // Fix for Java 21: use URL constructor instead of URI.toURL()
+      URL gifUrl = new URL(picsUrl, "gecko.gif");
+      this.setIconImage(new ImageIcon(gifUrl).getImage());
     }catch(Exception e){
       e.printStackTrace();
     }
